      other types of dummy packages.  Based on a patch from Luca
      Falavigna.  (Closes: #569220)
    + [RG] New check for packages shipping files literally called '*'
      (star symbol).  Thanks, Niels Thykier.  (Closes: #574771)
    + [RG] New checks for incorrect and unknown locale codes in
      /usr/share/locale subdirectories.
  * checks/init.d:
    + [RA] Exclude symlinks to upstart-job from init script syntax checks.
      Based on a patch by Jos Boumans.  (Closes: #569492)
    + [RA] Allow umountnfs to satisfy a $remote_fs requirement and
      umountnfs or umountfs to satisfy a $local_fs requirement in LSB
      headers, avoiding false positives in unusual situations such as
      rsyslog.  Thanks, Michael Biebl.  (Closes: #571280)
  * checks/manpages.desc:
    + [RA] Clarify the long description for manpage-has-bad-whatis-entry.
      Thanks, Jari Aalto.  (Closes: #573837)
  * checks/rules:
    + [RA] Allow ant1.7 to satisfy a build requirement for ant.  Thanks,
      Rene Engelhard.  (Closes: #572430)
    + [RG] Require a versioned build-dependency on cdbs if scons.mk or
      perl-build.mk are used.  (Closes: #574744)
    + [RG] Warn about installing files specifying the destination
      directory with PREFIX when Perl's MakeMaker build system is used.
      Based on a patch by Niko Tyni.  (Closes: #568748)
    + [RA] Also check binary-independent and wildcard rules for programs
      requiring build dependencies, but accept them in either
      Build-Depends or Build-Depends-Indep.
    + [RA] Check for a quilt dependency when the debhelper 7 quilt module
      is used.  Thanks, Martin Meredith.  (Closes: #548094)
    + [RA] Allow python2.6 packages to satisfy Python build dependencies.
  * checks/scripts{,.desc}:
    + [ADB] Update the list of octave interpreters, adding octave3.2
      (Closes: #574048) and removing octave2.1 (only available in lenny
      and earlier) and octave3.1.