@@ -315,6 +315,8 @@ Info: The given init script seems to refer to <tt>/usr</tt>, possibly
  Using Should-Start or Should-Stop to declare the dependency is
  conceptually incorrect since the $remote_fs facility is always
  available.  Required-Start or Required-Stop should be used instead.
+ Also, please note that $all should not be used in Required-Stop, only
+ Required-Start.
 Ref: http://wiki.debian.org/LSBInitScripts
 
 Tag: init.d-script-missing-dependency-on-local_fs
